@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-08T00:44:22Z",
-  "count_outdated" : 1021,
-  "uniques_outdated" : 647,
-  "count" : 1054,
-  "uniques" : 669,
+  "timestamp" : "2023-10-08T16:09:58Z",
+  "count_outdated" : 1022,
+  "uniques_outdated" : 648,
+  "count" : 1055,
+  "uniques" : 670,
   "clones" : [
-    {
-      "timestamp": "2023-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-25T00:00:00Z",
       "count": 3,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2023-10-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
