@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-09-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-25T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2023-10-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
