@@ -1,3 +1,12 @@
+2023-10-08T16:09:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6448656175 # 1232
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
+* notice: last 14d: unq all: 4 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 647 1021 / 669 1054
+* notice: next accum: outdated-unq outdated-all / unq all: 648 1022 / 670 1055
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-09-24] / [2023-10-08]
+
 2023-10-08T00:44:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6444439297 # 1230
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
